現作業段階プッシュ

--- a/.gitignore
+++ b/.gitignore
@@ -275,6 +275,12 @@ FakesAssemblies/
 .ntvs_analysis.dat
 node_modules/
 
+# parcel-cache
+.parcel-cache
+
+# src dir
+src/
+
 # Visual Studio 6 build log
 *.plg
 
